syntax = "proto3";
package account.v1;

option go_package = "github.com/sandermendes/Go-Golang-Gorm-Postgres-Gqlgen-Graphql/main/shared/protobufs/_generated/account/v1;accountv1";

message RegisterRequest {
    // Basic fields
    string first_name = 1;
    string last_name = 2;
    string email = 3;
    string password = 4;

    // additional fields
    optional string nick_name = 5;
    optional string profilePic = 6;
    optional string birthDate = 7;
    optional string gender = 8;
}
